<resources>
    <string name="app_name">Who\'s That Mon</string>
    <string name="opening_message">“Welcome to the world of POKEMON!”</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_trainer_name">Your Trainer Name</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="contact_us">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="app_settings">App Settings</string>
    <string name="welcome_trainer">Welcome, Trainer!</string>
    <string name="logout">Logout</string>
    <string name="notifications2">Notifications</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="sync_data">Sync Data</string>
    <string name="settings2">Settings</string>
    <string name="biometrics">Biometrics</string>
    <string name="notifications_enabled_title">Notifications Enabled</string>
    <string name="notifications_enabled_message">You will now receive updates from the world of Pokémon!</string>
</resources>