<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pokedex_background"
    tools:context=".ui.AccountSettings">

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="36dp"
        app:cardElevation="12dp"
        app:cardBackgroundColor="#FDFDFD"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/settings_card_background">

            <!--Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/orange_kid"
                android:text="@string/settings2"
                android:textSize="45sp"
                android:textStyle="bold"
                android:textColor="#1A1A1A"
                android:gravity="center"
                android:padding="24dp" />

            <!--Sync -->
            <LinearLayout
                android:id="@+id/item_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/img"
                    app:tint="#6200EE"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/orange_kid"
                    android:text="@string/sync_data"
                    android:textSize="30sp"
                    android:textColor="#212121"
                    android:layout_marginStart="20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>



            <View android:layout_width="match_parent" android:layout_height="1dp"
                android:background="#EEEEEE" android:layout_marginStart="68dp"/>

            <LinearLayout
                android:id="@+id/Biometrics_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/img_1"
                    app:tint="#6200EE"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/orange_kid"
                    android:text="@string/biometrics"
                    android:textSize="30sp"
                    android:textColor="#212121"
                    android:layout_marginStart="20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_biometrics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>

            <!--Language -->
            <LinearLayout
                android:id="@+id/item_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/language"
                    app:tint="#6200EE" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/orange_kid"

                    android:text="@string/language"
                    android:textSize="30sp"
                    android:textColor="#212121"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/tv_current_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:importantForAccessibility="no"
                    android:src="@android:drawable/ic_menu_manage"
                    app:tint="#888888"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <View android:layout_width="match_parent" android:layout_height="1dp"
                android:background="#EEEEEE" android:layout_marginStart="68dp"/>

            <!-- Notifications -->
            <LinearLayout
                android:id="@+id/item_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:importantForAccessibility="no"
                    android:src="@android:drawable/ic_dialog_info"
                    app:tint="#6200EE" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/orange_kid"
                    android:text="@string/notifications2"
                    android:textSize="30sp"
                    android:textColor="#212121"
                    android:layout_marginStart="20dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>

            <View android:layout_width="match_parent" android:layout_height="1dp"
                android:background="#EEEEEE" android:layout_marginStart="68dp"/>



            <!--Logout -->
            <LinearLayout
                android:id="@+id/item_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:importantForAccessibility="no"
                    android:src="@android:drawable/ic_lock_power_off"
                    app:tint="#D32F2F" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/logout"
                    android:textSize="17sp"
                    android:textColor="#D32F2F"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>